--- a/ubun2_fe/package.json
+++ b/ubun2_fe/package.json
@@ -1,28 +1,45 @@
 {
-  "name": "ubun2_fe",
+  "name": "adminpage-tailwind",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
+    "axios": "^1.1.3",
+    "capitalize-the-first-letter": "^1.0.8",
+    "chart.js": "^4.0.1",
+    "dayjs": "^1.11.7",
+    "flowbite": "^2.4.1",
+    "flowbite-react": "^0.10.1",
+    "moment": "^2.29.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-chartjs-2": "^5.0.1",
+    "react-dom": "^18.3.1",
+    "react-notifications": "^1.7.4",
+    "react-router-dom": "^6.24.0",
+    "react-tailwindcss-datepicker": "^1.6.0",
+    "theme-change": "^2.2.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.13",
+    "daisyui": "^4.4.19",
     "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "typescript": "^5.2.2",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.3.6",
     "vite": "^5.3.1"
   }
 }
