--- a/ubun2_fe/package.json
+++ b/ubun2_fe/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.7",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.0.1",
