--- a/ubun2_be/build.gradle
+++ b/ubun2_be/build.gradle
@@ -40,8 +40,15 @@ dependencies {
 
 	//s3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-}
 
-tasks.named('test') {
-	useJUnitPlatform()
+	//querydsl
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+
+	tasks.named('test') {
+		useJUnitPlatform()
+	}
 }
