KAN-47 feat: 회원 등록 양식 엑셀 다운로드

--- a/ubun2_be/build.gradle
+++ b/ubun2_be/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	// excel
+	implementation 'org.apache.poi:poi-ooxml:5.2.3'
+
 	tasks.named('test') {
 		useJUnitPlatform()
 	}
