KAN-81 feat: 메일전송을 위한 설정 추가

--- a/ubun2_be/build.gradle
+++ b/ubun2_be/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	//email
+	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.2'
+
 	tasks.named('test') {
 		useJUnitPlatform()
 	}
