--- a/ubun2_fe/package.json
+++ b/ubun2_fe/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query-devtools": "^5.40.1",
     "axios": "^1.1.3",
     "capitalize-the-first-letter": "^1.0.8",
     "chart.js": "^4.0.1",
