--- a/ubun2_fe/package.json
+++ b/ubun2_fe/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.3.1",
+    "react-animated-numbers": "^0.18.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
