--- a/ubun2_fe/package.json
+++ b/ubun2_fe/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.7",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.3.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.3.1",
