--- a/ubun2_fe/package.json
+++ b/ubun2_fe/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-infinite-scroller": "^1.2.6",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.24.0",
     "react-tailwindcss-datepicker": "^1.6.0",
