KAN-179 feat: FCM 단일 메시지 전송 rngus

--- a/ubun2_be/build.gradle
+++ b/ubun2_be/build.gradle
@@ -65,6 +65,10 @@ dependencies {
 	//sms
 	implementation 'net.nurigo:sdk:4.3.0'
 
+	// fcm
+	implementation 'com.google.firebase:firebase-admin:9.2.0'
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version:'4.2.2'
+
 	tasks.named('test') {
 		useJUnitPlatform()
 	}
