--- a/ubun2_fe/package.json
+++ b/ubun2_fe/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.1.3",
     "capitalize-the-first-letter": "^1.0.8",
     "chart.js": "^4.0.1",
+    "d3-geo": "^3.1.1",
     "dayjs": "^1.11.7",
     "firebase": "^10.12.3",
     "flowbite": "^2.4.1",
@@ -30,10 +31,15 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-infinite-scroller": "^1.2.6",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.24.0",
+    "react-simple-maps": "^3.0.0",
     "react-tailwindcss-datepicker": "^1.6.0",
+    "react-tooltip": "^5.27.1",
+    "recharts": "^2.12.7",
     "theme-change": "^2.2.0",
+    "topojson": "^3.0.2",
     "vite-plugin-svgr": "^4.2.0",
     "zustand": "^4.5.2"
   },
