--- a/ubun2_fe/package.json
+++ b/ubun2_fe/package.json
@@ -39,7 +39,7 @@
     "react-tooltip": "^5.27.1",
     "recharts": "^2.12.7",
     "theme-change": "^2.2.0",
-    "topojson": "^3.0.2",
+    "use-detect-keyboard-open": "^0.4.0",
     "vite-plugin-svgr": "^4.2.0",
     "zustand": "^4.5.2"
   },
