--- a/.github/workflows/be_deploy.yml
+++ b/.github/workflows/be_deploy.yml
@@ -54,4 +54,4 @@ jobs:
           script: |
             sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             sudo docker pull ${{ secrets.DOCKER_BACK_REPO }}
-            docker-compose up -d ubun2_be
+            docker-compose up --build -d
