--- a/.github/workflows/fe_deploy.yml
+++ b/.github/workflows/fe_deploy.yml
@@ -54,6 +54,5 @@ jobs:
           
           script: |
             sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            sudo docker-compose down -v
             sudo docker pull ${{ secrets.DOCKER_FRONT_REPO }}
-            sudo docker-compose up --build -d
+            docker-compose up --build -d
