--- a/.github/workflows/be_deploy.yml
+++ b/.github/workflows/be_deploy.yml
@@ -53,5 +53,7 @@ jobs:
           
           script: |
             sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            docker-compose down -v
             sudo docker pull ${{ secrets.DOCKER_BACK_REPO }}
             docker-compose up --build -d
+            docker image prune -f
