--- a/.github/workflows/be_deploy.yml
+++ b/.github/workflows/be_deploy.yml
@@ -7,7 +7,13 @@ on:
       - 'ubun2_be/**'
   
 permissions:
-  contents: read
+  pages: write
+  id-token: write
+  contents: write
+  issues: read
+  checks: write
+  pull-requests: write
+  
 jobs:
   build-test:
     runs-on: ubuntu-latest
