--- a/.github/workflows/fe_deploy.yml
+++ b/.github/workflows/fe_deploy.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           cd ./ubun2_fe
           echo "${{ secrets.FRONT_ENV }}" > .env
+          cat .env
       - name: Install dependencies
         run: |
           cd ./ubun2_fe
