--- a/.github/workflows/be_deploy.yml
+++ b/.github/workflows/be_deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'ubun2_be/**'
-  
+
 permissions:
   contents: read
 
@@ -19,30 +19,13 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'
-      - name: Set up environment variables
+          distribution: "temurin"
+
+      - name: Make application.properties
         run: |
-          echo "DB_HOST=${{ secrets.RDS_HOST }}" >> $GITHUB_ENV
-          echo "DB_PORT=${{ secrets.RDS_PORT }}" >> $GITHUB_ENV
-          echo "DB_NAME=${{ secrets.RDS_DB_NAME }}" >> $GITHUB_ENV
-          echo "DB_USERNAME=${{ secrets.RDS_USERNAME }}" >> $GITHUB_ENV
-          echo "DB_PASSWORD=${{ secrets.RDS_PASSWORD }}" >> $GITHUB_ENV
-          echo "AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }}" >> $GITHUB_ENV
-          echo "AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }}" >> $GITHUB_ENV
-          echo "S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}" >> $GITHUB_ENV
-          echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
-          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> $GITHUB_ENV
-          echo "JWT_ACCESS_EXPIRATION=${{ secrets.JWT_ACCESS_EXPIRATION }}" >> $GITHUB_ENV
-          echo "JWT_REFRESH_EXPIRATION=${{ secrets.JWT_REFRESH_EXPIRATION }}" >> $GITHUB_ENV
-          echo "JWT_REFRESH_COOKIE_EXPIRATION=${{ secrets.JWT_REFRESH_COOKIE_EXPIRATION }}" >> $GITHUB_ENV
-          echo "REDIS_HOST=${{ secrets.REDIS_HOST }}" >> $GITHUB_ENV
-          echo "REDIS_PORT=${{ secrets.REDIS_PORT }}" >> $GITHUB_ENV
-          echo "MAIL_USERNAME=${{ secrets.MAIL_USERNAME }}" >> $GITHUB_ENV
-          echo "MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }}" >> $GITHUB_ENV
-          echo "SMS_API_KEY=${{ secrets.SMS_API_KEY }}" >> $GITHUB_ENV
-          echo "SMS_API_SECRET=${{ secrets.SMS_API_SECRET }}" >> $GITHUB_ENV         
-          echo "SMS_API_DOMAIN=${{ secrets.SMS_API_DOMAIN }}" >> $GITHUB_ENV
-          echo "SMS_FROM_NUMBER=${{ secrets.SMS_FROM_NUMBER }}" >> $GITHUB_ENV
+          echo "${{ secrets.PROPERTIES }}" > ubun2_be/src/main/resources/application.properties
+          cat ubun2_be/src/main/resources/application.properties
+
       - name: Build with Gradle
         run: |
           cd ./ubun2_be
@@ -50,30 +33,34 @@ jobs:
           ./gradlew clean build -x test
 
   deploy-to-Server:
-    if: github.event_name == 'push'
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: build-test
-    steps:
-      - uses: actions/checkout@v3
-      - name: Docker build & push to prod
-        run: |
-          cd ./ubun2_be
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker buildx build --push --platform linux/amd64 -t ${{ secrets.DOCKER_BACK_REPO }} .
-
-      - name: Deploy start
-        uses: appleboy/ssh-action@master
-        id: deploy
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_KEY }}
-          port: ${{ secrets.EC2_SSH_PORT }}
-          script: |
-            sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            sudo docker pull ${{ secrets.DOCKER_BACK_REPO }}
-            sudo docker rm -f springboot-app
-            docker-compose up --build -d
-
-
+      if: github.event_name == 'push'
+      name: Deploy
+      runs-on: ubuntu-latest
+      needs: build-test
+      steps:
+        - uses: actions/checkout@v3
+        - name: Make application.properties
+          run: |
+            echo "${{ secrets.PROPERTIES }}" > ubun2_be/src/main/resources/application.properties
+            cat ubun2_be/src/main/resources/application.properties
+        - name: Docker build & push to prod
+          run: |
+            cd ./ubun2_be
+            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            docker buildx build --push --platform linux/amd64 -t ${{ secrets.DOCKER_BACK_REPO }} .
+          
+        - name: Deploy start
+          uses: appleboy/ssh-action@master
+          id: deploy
+          with:
+            host: ${{ secrets.EC2_HOST }}
+            username: ${{ secrets.EC2_USERNAME }}
+            key: ${{ secrets.EC2_KEY }}
+            port: ${{ secrets.EC2_SSH_PORT }}
+            
+            script: |
+              sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+              docker-compose down -v
+              sudo docker pull ${{ secrets.DOCKER_BACK_REPO }}
+              sudo docker rm -f springboot-app
+              docker-compose up --build -d
