--- a/ubun2_be/build.gradle
+++ b/ubun2_be/build.gradle
@@ -72,6 +72,9 @@ dependencies {
 	implementation 'com.squareup.okhttp3:okhttp:4.11.0'  // 최신 안정 버전
 	implementation 'com.squareup.okio:okio:3.5.0'  // 최신 안정 버전
 
+	//aop
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
 	tasks.named('test') {
 		useJUnitPlatform()
 	}
