KAN-200 feat : 캡처를 위한 html2canvas install

--- a/ubun2_fe/package.json
+++ b/ubun2_fe/package.json
@@ -23,6 +23,7 @@
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.2",
+    "html2canvas-pro": "^1.5.8",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "qs": "^6.12.3",
