KAN-226 feat: dto 유효성 체크 어노테이션 추가

--- a/ubun2_be/build.gradle
+++ b/ubun2_be/build.gradle
@@ -75,6 +75,9 @@ dependencies {
 	//aop
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 
+	//validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	tasks.named('test') {
 		useJUnitPlatform()
 	}
