--- a/ubun2_fe/package.json
+++ b/ubun2_fe/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-animated-numbers": "^0.18.0",
     "react-chartjs-2": "^5.0.1",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-infinite-scroller": "^1.2.6",
