KAN-230 test: 테스트 코드 수정

--- a/ubun2_be/.gitignore
+++ b/ubun2_be/.gitignore
@@ -39,4 +39,5 @@ out/
 
 
 /src/main/resources/application.properties
+/src/main/resources/application-test.properties
 /src/main/resources/firebase_service_key.json
